[package]
name = "tree-sitter-eu4-script"
description = "Parser for Eu4 Script"
version = "0.1.0"
authors = ["relue <relue@cock.lu>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "eu4-script"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/reluekiss/eu4scriptlsp"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
